--- a/style/style.css
+++ b/style/style.css
@@ -79,9 +79,11 @@ body{
     margin-top: 10px;
     width: 100%;
     color:rgb(241, 240, 240) ;
-    background-color: cadetblue;
+    background-color: rgb(200, 23, 206);
     border-radius: 10px;
     border: none;
+    pointer-events: none;
+    opacity: 0.5;
 }
 .input-control{
     display: flex;
@@ -111,4 +113,4 @@ body{
     color: red;
     font-size: 9px;
     height: 20px;
-    font-size: 15px;
+    font-size: 15px;}
